Fixed up spacing of nav bar and margin

--- a/styles.css
+++ b/styles.css
@@ -18,22 +18,27 @@ a {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: bold;
+    margin: 0 0 100px;
 }
 
 .header {
-    padding: 10px 0px 10px 0px;
+    padding: 10px 250px;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #1F2937;
     color:#E5E7EB;
     font-size: 18px;
-    padding: 10px 100px;
 }
 
 .nav-links ul {
     display: flex;
-    margin: 0;
-    padding: 0;
+    margin: 0 0 100px;
+    padding: 10px 0px;
     gap: 8px;
+}
+
+.hero {
+    background-color: #1F2937
 }
